# MBase

./: .gitignore  README.md
lib/Debug/x64/MUtility/: MUtility.lib
lib/Debug/x64/SDL2/: SDL2main.lib
lib/Debug/x64/SDL_FontCache/: SDL_FontCache.lib
lib/Release/x64/MUtility/: MUtility.lib
lib/Release/x64/SDL2/: SDL2main.lib
lib/Release/x64/SDL_FontCache/: SDL_FontCache.lib
lib/x64/MUtility/: MUtility.lib
project/: CMakeLists.txt  CopyMeDependecies.txt  cleanup.bat  generatesolution.bat
source/: ButtonSystem.cpp  ButtonSystem.h  ComponentBuffer.cpp  ComponentBuffer.h  FrameCounter.cpp  FrameCounter.h  MEngine.cpp  MEngineBackgroundInput.cpp  MEngineBackgroundInput.h  MEngineComponentManager.cpp  MEngineComponentManagerInternal.h  MEngineConfig.cpp  MEngineConfigInternal.h  MEngineConsole.cpp  MEngineConsoleInternal.h  MEngineEntityFactory.cpp  MEngineEntityManager.cpp  MEngineGlobalSystems.h  MEngineGraphics.cpp  MEngineGraphicsInternal.h  MEngineInput.cpp  MEngineInternalComponents.cpp  MEngineSystem.cpp  MEngineSystemManager.cpp  MEngineText.cpp  MEngineTextInternal.h  MEngineTypes.cpp  MEngineUTility.cpp  MEngineUtility.cpp  MEngineUtilityA.cpp  MEngineUtilityInternal.h  Scancodes.h  TextBoxSystem.cpp  _ButtonSystem.cpp  _ComponentBuffer.h  _MEngineConfig.cpp  _MEngineEntityFactory.cpp  _MEngineEntityManager.cpp  _MEngineEntityManagerInternal.h  _MEngineGlobalSystems.h  (+48 more)
source/Interface/: MengineEntityFactory.h  MengineGraphics.h  MengineInput.h  MengineInputKeys.h  MengineInternalComponents.h  MengineSystem.h  MengineText.h
source/_Interface/: _Mengine.h
source/interface/: mengine.h  mengineColor.h  mengineComponent.h  mengineEntityFactory.h  mengineEntityManager.h  mengineGraphics.h  mengineInput.h  mengineInternalComponents.h  mengineLog.h  mengineObject.h  mengineText.h
source/utilities/: errorUtility.h  fileUtility.cpp  fileUtility.h
